Update hourly protection check schedule to run at 3:00 AM every Sunday

--- a/.github/workflows/hourly-protection-check.yml
+++ b/.github/workflows/hourly-protection-check.yml
@@ -2,7 +2,7 @@ name: Hourly Branch Protection Check
 
 on:
   schedule:
-    - cron: "0 * * * *" # automatically every hour
+    - cron: "0 3 * * 0" # Run at 3:00 AM every Sunday
 
   # Allow manual runs from the Actions tab
   workflow_dispatch:
